# api/src/controller/http/health/health.controller.ts
@@ -1,4 +1,5 @@
 import { Request, Response, Router } from 'express';
+import express from 'express';
 
 import { methodNotAllowed } from '@controller/http/handler';
 import { LivenessResponse } from '@controller/http/health/response/health.response';
@@ -7,7 +8,11 @@ export class HealthController {
   public routes = (): Router => {
     const router: Router = Router();
 
-    router.route(`/liveness`).get(this.checkLiveness).all(methodNotAllowed);
+    router
+      .use(express.json())
+      .route(`/liveness`)
+      .get(this.checkLiveness)
+      .all(methodNotAllowed);
     return router;
   };
 
